Fix spacing between sections

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,7 @@
+.section-about {
+  margin-bottom: 10rem;
+}
+
 .about {
   height: 100vh;
 
